-controllers, services, repositories for: message, user -connected db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url=spring.datasource.url= jdbc:postgresql://localhost:5432/sharehome
+spring.datasource.url=jdbc:postgresql://localhost:5432/pastebin
 spring.datasource.username=user
 spring.datasource.password=qwerty
 
